2008-07-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* data/sqlite-stored-procs.sql:
	* data/sqlite-cache.sql:
	* src/tracker-indexer/tracker-indexer-db.c:
	* src/tracker-indexer/tracker-indexer-db.h:
	* src/tracker-indexer/tracker-indexer.c:

	Removed the need for GetNewID and UpdateNewID from the indexer
	Replaced the GetNewEventID and UpdateNewEventID with an autoincrement

2008-07-22  Carlos Garnacho  <carlos@imendio.com>

	Improve data flushing to DBs/Indexes, based on a patch by Ivan Frade

	* src/tracker-indexer/tracker-index.c (tracker_index_free): Just flush
	if there are remaining items before the index is destroyed.
	* src/tracker-indexer/tracker-indexer.c (schedule_flush_cb): Renamed
	to flush_data(). Always flush the Index, which is completely unrelated
	to DB transactions.
	(schedule_flush): Call flush_data() if needed immediately
	* src/tracker-indexer/tracker-main.c (indexer_finished_cb): Attach the
	extra refcount to indexer to the timeout. So it's unreferenced when
	the timeout source is removed.

2008-07-22  Carlos Garnacho  <carlos@imendio.com>

	Several random fixes by Philip Van Hoof.

	* src/libtracker-db/tracker-db-dbus.c
	(tracker_dbus_query_result_to_hash_table): tabify.
	* src/libtracker-db/tracker-db-manager.c: Initialize correctly the
	TrackerDBDefinition structure
	* tests/libtracker-common/tracker-file-utils-test.c
	(test_path_list_filter_duplicates): Avoid compiler warning.

2008-07-22  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-processor.c: (item_queue_handlers_cb),
	(crawler_finished_cb): Make it clear which module we are sending
	items for and also fixed the cut and paste bug I introduced which
	was using the _files_delete() API for new and updated files. Plus
	now we have some main context iteration code in the tight loop
	where we get back all files from the crawler. Being unresponsive
	for 10 seconds while the processor adds 100k items into a queue
	and create strings for each of them is not acceptable.
